kubernetes/external-applications/portainer/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: portainer
  namespace: external-applications
spec:
  type: ExternalName
  ports:
  - name: proxmox
    port: 9443
  externalName: 10.0.0.100
