kubernetes/external-applications/portainer/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.local.syspawn.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
          scheme: https
  tls:
    secretName: local-syspawn-com-tls
